# nauty

./: .gitignore  Makefile.am  addedgeg.c  amtog.c  biplabg.c  blisstog.c  catg.c  changes24-26.txt  complg.c  configure  configure.ac  converseg.c  copyg.c  cubhamg.c  deledgeg.c  delptg.c  directg.c  dreadnaut.c  dretodot.c  dretog.c  genbg.c  geng.c  genquarticg.c  genrang.c  genspecialg.c  gentourng.c  gentreeg.c  gtnauty.c  gtools-h.in  gtools.h  gutils.h  hamheuristic.c  labelg.c  linegraphg.c  listg.c  makefile.in  multig.c  naucompare.c  naugraph.c  naugroup.h  (+63 more)
.github/workflows/: ci-sage.yml
debian/: NRswitchg.1  README.Debian  README.source  addedgeg.1  amtog.1  biplabg.1  catg.1  changelog  clean  complg.1  control  copyg.1  copyright  countg.1  cron.d.ex  deledgeg.1  directg.1  docs  dreadnaut.1  dretog.1  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  genbg.1  geng.1  genrang.1  init.d.ex  init.d.lsb.ex  labelg.1  libnauty-dev.install  libnauty0d.install  libnauty0d.symbols  libnauty1d.install  libnauty1d.symbols  libnauty2-dbg.links  libnauty2-dev.install  libnauty2-dev.links  libnauty2-dev.maintscript  libnauty2.docs  libnauty2.install  (+32 more)
debian/adhoc/examples/: Makefile  build.sh
debian/man/: genbg.h2m  labelg.h2m  pickg.h2m  shortg.h2m  showg.h2m
debian/patches/: debianization-prefix.patch  debianization.patch  series  system-preprocessing-examples.patch  unbundle-cliquer.patch  upstream-C2help2man.patch  upstream-autotoolization.patch  upstream-autotoolization.path  upstream-fix-gt_numorbits.patch  upstream-lintian-spelling-error.patch  upstream-zlib-blisstog_c.patch
debian/patches/feature/: shlib.diff
debian/patches/fix/: getline.diff
debian/source/: git-patches  lintian-overrides
debian/tests/: build-examples  control  make-check
debian/upstream/: metadata
m4/: gmp.m4  zlib.m4
nauty/: Makefile.am
